--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,21 @@ $verde_nova: #9FBF2C;
 $rojo_nova: #F21B1B;
 $gris: #575757;
 
+/* NAVBAR */
+// nav {
+//   background: $azul_nova_black !important;
+//   border-bottom: 5px solid $verde_nova;
+//   height: 80px;
+// }
+
+.menu-item {
+  font-size: 30px;
+}
+
+.redes {
+  font-size: 25px !important
+}
+/* PRINCIPAL */
 .bg-img-primary {
     height: 100vh;
 }
@@ -14,6 +29,10 @@ $gris: #575757;
     font-weight: bold;
 }
 
+.subtiltulo {
+  font-size: 15px;
+}
+
 .gris-nova {
     color: #575757 !important;
 }
@@ -21,7 +40,7 @@ $gris: #575757;
 .button {
     border: none;
     color: white;
-    padding: 10px;
+    padding: 5px;
     font-weight: bold;
     text-align: center;
     text-decoration: none;
@@ -41,10 +60,27 @@ $gris: #575757;
 
 .button-rojo {
     background-color: $rojo_nova;
+	transition: .3s;
+	color: #fff !important;
+    &:hover {
+      background-color: rgba($rojo_nova, .8);
+    }
 }
 
 .servicios-size {
     font-size: 55px;
+}
+
+.bg-azul {
+  background-color: $azul_nova_black;
+}
+
+.bg-azul-claro {
+  background-color: $azul_nova_claro;
+}
+
+.white-line {
+  border-bottom: 2px solid white;
 }
 
 .margin-atencion {
@@ -63,13 +99,23 @@ $gris: #575757;
     background-repeat: no-repeat;
 }
 
+.rojo-matraz {
+  background-image: url('./assets/images/rojomatraz.png');
+  background-size: auto 100%;
+  background-position-x: right;
+  background-repeat: no-repeat;
+}
+
 .extra-azul {
     background-color: $azul_nova_black;
     padding: 0px;
     font-size: 18px;
     font-weight: bold;
     color: white;
-    padding: 3px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 20px;
+    text-align: right;
     border-radius: 0 20px 20px 0;
 }
 
@@ -84,10 +130,224 @@ $gris: #575757;
 }
 
 .hijo {
-  display: flex;  
+  display: flex;
 }
 
 .small-text {
     font-size: 12px;
     color: $gris;
+}
+
+.input {
+  margin-bottom: 15px !important;
+  border: 0px;
+  width: 100%;
+  border-bottom: 1px solid $azul_nova_claro !important;
+  color: $azul_nova_claro;
+  background-color: transparent;
+}
+
+.input::placeholder {
+  color: $azul_nova_claro !important;
+}
+
+.hs-responsive-embed { 
+	position: relative; 
+  height: 0; 
+  overflow: hidden; 
+  padding-top: 0; 
+  padding-left: 0; 
+  padding-right: 0;  
+   } 
+  
+  .hs-responsive-embed iframe, 
+  .hs-responsive-embed object, 
+  .hs-responsive-embed embed { 
+   position: absolute; 
+  top: 0; 
+  left: 0; 
+  width: 100% !important; 
+  height: 100% !important; 
+  border: 0; 
+   } 
+  
+  .hs-responsive-embed, 
+  .hs-responsive-embed.hs-responsive-embed-youtube, 
+  .hs-responsive-embed.hs-responsive-embed-wistia, 
+  .hs-responsive-embed.hs-responsive-embed-vimeo { 
+   padding-bottom: 56.25%; 
+  } 
+
+// .video-container {
+// 	position: relative;
+//     padding-bottom: 56.25%; /* 16:9 */
+//     padding-top: 25px;
+//     height: 0;
+// }
+
+// .video-youtube {
+// 	position: absolute;
+//     width: 100% !important;
+//  	height: calc(100vw/2.5) !important;
+// }
+
+// MENU
+.menu_bar {
+	display:none;
+}
+ 
+header {
+	width: 100%;
+}
+ 
+header nav {
+	background: $azul_nova_black;
+	border-bottom: 5px solid $verde_nova;
+	z-index:1000;
+	width:100%;
+}
+ 
+header nav ul {
+	list-style:none;
+	margin: 0px;
+}
+ 
+header nav ul li {
+	display:inline-block;
+	position: relative;
+}
+ 
+header nav ul li:hover {
+	background: $azul_nova_claro;
+}
+ 
+header nav ul li a {
+	color:#fff;
+	display:block;
+	text-decoration:none;
+	padding: 20px;
+}
+
+header nav ul li a:hover {
+	color:#fff;
+	text-decoration:none;
+
+}
+
+header nav ul li a span {
+	margin-right:10px;
+}
+ 
+header nav ul li:hover .children {
+	display:block;
+}
+ 
+header nav ul li .children {
+	display: none;
+	background:#011826;
+	position: absolute;
+	width: 150%;
+	z-index:1000;
+}
+ 
+header nav ul li .children li {
+	display:block;
+	overflow: hidden;
+	border-bottom: 1px solid rgba(255,255,255,.5);
+}
+ 
+header nav ul li .children li a {
+	display: block;
+}
+ 
+header nav ul li .children li a span {
+	float: right;
+	position: relative;
+	top:3px;
+	margin-right:0;
+	margin-left:10px;
+}
+ 
+header nav ul li .caret {
+	position: relative;
+	top:3px;
+	margin-left:10px;
+	margin-right:0px;
+}
+ 
+@media screen and (max-width: 800px) {
+	body {
+		padding-top:80px;
+	}
+ 
+	.menu_bar {
+		display:block;
+		width:100%;
+		position: fixed;
+		z-index: 1000;
+		top:0;
+		background: $azul_nova_black;
+		border-bottom: 5px solid $verde_nova;
+	}
+ 
+	.menu_bar .bt-menu {
+		display: block;
+		padding: 20px;
+		color: #fff;
+		overflow: hidden;
+		font-size: 25px;
+		font-weight: bold;
+		text-decoration: none;
+	}
+ 
+	.menu_bar span {
+		padding-right: 10px;
+		font-size: 20px;
+	}
+ 
+	header nav {
+		width: 90%;
+		height: calc(100% - 77px);
+		position: fixed;
+		right:100%;
+		margin: 0;
+		overflow: scroll;
+	}
+ 
+	header nav ul li {
+		display: block;
+		border-bottom:1px solid rgba( $verde_nova ,.9);
+	}
+ 
+	header nav ul li a {
+		display: block;
+	}
+ 
+	header nav ul li:hover .children {
+		display: none;
+	}
+ 
+	header nav ul li .children {
+		width: 100%;
+		position: relative;
+	}
+ 
+	header nav ul li .children li a {
+		margin-left:20px;
+	}
+ 
+	header nav ul li .caret {
+		float: right;
+	}
+}
+
+// RESPONSIVE
+@media only screen and (max-width: 778px) {
+  .compu-style {
+    background-image: none;
+  }
+
+  .rojo-matraz {
+    background-image:none;
+  }
 }
