--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,25 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-navbar></app-navbar>
+<div class="uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-light" style="height:92vh;"
+    data-src="./assets/banner_nova.jpg" uk-img>
+    <div class="row justify-content-center">
+        <div class="col-12">
+            <h2 class="text-center shadow-title em-triple titulo-nova mb-0">PUNTO GUADIANA</h2>
+        </div>
+        <div class="col-12">
+            <h3 class="text-center shadow-title titulo-nova mb-0">el punto es tu bienestar</h3>
+        </div>
+        <div class="col-12">
+            <h1 class="text-center shadow-title em-cuatruple titulo-nova mb-0">¡YA ABRIMOS!</h1>
+        </div>
+        <div class="col-3">
+            <h3 class="text-center button button-rojo col-12 titulo-nova mb-0">PLANTA BAJA</h3>
+        </div>
+    </div>
+</div>
+
+<div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
+    <app-navbar uk-navbar></app-navbar>
+</div>
+    
 <app-principal></app-principal>
 <app-footer></app-footer>
