--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -24,11 +24,11 @@
   <nav >
     <ul  class="p-0">
       <img class="my-2 mx-3" width="70px" src="./assets/logos/nova_blanco.png" alt="">
-      <li><a class="" href="">SERVICIOS</a></li>
+      <li><a class="" href="#servicios">SERVICIOS</a></li>
       <li><a class="" href="http://189.197.184.182:9090/EclipseWeb/login" target="_blanc">RESULTADOS EN LÍNEA</a></li>
       <li><a class="" href="">COTIZADOR</a></li>
       <li><a class="" href="">BLOG</a></li>
-      <li><a class="" href="">CONTACTO</a></li>
+      <li><a class="" href="#contacto">CONTACTO</a></li>
       <li><a class="" href=""><i class="fab fa-facebook"></i></a></li>
       <li>
         <a class="menu-item button button-rojo ml-3 px-3" ><i class="fas fa-phone-alt pr-2"></i>Urgencias</a>
