--- a/src/app/components/video/video.component.html
+++ b/src/app/components/video/video.component.html
@@ -18,4 +18,6 @@
       </div>
     </div>
   </div>
+  <div class="g-ytsubscribe" data-channelid="UCp9wwNw9sUZSTp9JPfteTFw" data-layout="full" data-count="hidden"></div>
+
 </div>
