--- a/src/app/components/video/video.component.html
+++ b/src/app/components/video/video.component.html
@@ -3,7 +3,7 @@
     de interés, suscríbete a nuestro canal de YouTube.</h4>
     
   <div class="hs-responsive-embed">
-    <iframe class="video-youtube" src="https://www.youtube.com/embed/mwiPi_U1T0s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class="video-youtube" [src]="videoSelect | domseguro:'https://www.youtube.com/embed/'" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div class="row justify-content-md-center">
     <div class="col-12">
@@ -18,6 +18,7 @@
       </div>
     </div>
   </div>
+  <br>
   <div class="g-ytsubscribe" data-channelid="UCp9wwNw9sUZSTp9JPfteTFw" data-layout="full" data-count="hidden"></div>
 
 </div>
