Agregar blog, y nosotros

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -18,7 +18,7 @@
 <header>
 
   <div class="menu_bar">
-    <a href="#" class="bt-menu"><span class="fa fa-bars"></span>Menú</a>
+    <a [routerLink]="" class="bt-menu"><span class="fa fa-bars"></span>Menú</a>
   </div>
 
   <nav >
@@ -27,7 +27,7 @@
       <li><a class="" href="#servicios">SERVICIOS</a></li>
       <li><a class="" href="http://189.197.184.182:9090/EclipseWeb/login" target="_blanc">RESULTADOS EN LÍNEA</a></li>
       <li><a class="" href="">COTIZADOR</a></li>
-      <li><a class="" href="">BLOG</a></li>
+      <li><a class="" [routerLink]="['/blog']">BLOG</a></li>
       <li><a class="" href="#contacto">CONTACTO</a></li>
       <li><a class="" href=""><i class="fab fa-facebook"></i></a></li>
       <li>
