--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,5 @@
 <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
     <app-navbar uk-navbar></app-navbar>
 </div>
-    
-<app-principal></app-principal>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
