--- a/src/app/components/principal/principal.component.html
+++ b/src/app/components/principal/principal.component.html
@@ -15,7 +15,7 @@
     </div>
     <div class="row justify-content-center mt-5">
       <div class="col-12 col-md-3">
-        <button class="button button-verde col-12">Conócenos ></button>
+        <a class="button button-verde col-12" [routerLink]="['/nosotros']">Conócenos ></a>
       </div>
     </div>
   </div>
@@ -61,7 +61,6 @@
         </div>
       </div>
     </div>
-
     <div class="col-12 col-md-6 mt-3">
       <div class="uk-height-medium uk-flex uk-flex-center
         uk-flex-middle uk-background-cover uk-light"
