--- a/src/app/components/blog/ver/ver.component.html
+++ b/src/app/components/blog/ver/ver.component.html
@@ -1,93 +1,53 @@
-<div class="uk-height-large uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-light" 
-  data-src="./assets/images/cells.jpg" uk-img>
-</div>
+<div *ngIf="blogContent.imagen != null" class="ratio-16-9 col-12" [style.background-image]="'url(' + blogContent.imagen +')'"></div>
+<!-- <div *ngIf="blogContent.imagen != null" class="ratio-16-9 col-12" [ngStyle]="{'background-image': this.blogContent.imagen}"></div> -->
 
 <div class="container my-5">
-  <h2 class="font-weight-bolder servicios-size mb-0">Laboratorios Nova premiado</h2>
-  <p class="mt-0">Jueves 09 mayo 2019</p>
+    <h2 class="font-weight-bolder servicios-size mb-0">{{ blogContent.titulo }}</h2>
+    <p class="mt-0">{{ blogContent.categoria }} | {{ blogContent.fecha | date: 'dd/MM/yyyy'}}</p>
 </div>
 
 <div class="container">
-  <div class="row">
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam similique accusamus quam veritatis, eius et. Dolorum perferendis omnis aspernatur, sunt facere earum dolore delectus quia tenetur aperiam! Nulla voluptatum rem sapiente tempore quod expedita debitis quibusdam saepe! Hic ducimus voluptate provident repudiandae autem natus quibusdam? Minus debitis distinctio, fugiat numquam atque enim dolorum harum iure nihil doloribus eum, aspernatur reprehenderit. Fugit cupiditate laborum facere mollitia totam unde eligendi. Numquam minus sapiente porro reiciendis itaque earum fuga nemo perferendis fugit unde.
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam similique accusamus quam veritatis, eius et. Dolorum perferendis omnis aspernatur, sunt facere earum dolore delectus quia tenetur aperiam! Nulla voluptatum rem sapiente tempore quod expedita debitis quibusdam saepe! Hic ducimus voluptate provident repudiandae autem natus quibusdam? Minus debitis distinctio, fugiat numquam atque enim dolorum harum iure nihil doloribus eum, aspernatur reprehenderit. Fugit cupiditate laborum facere mollitia totam unde eligendi. Numquam minus sapiente porro reiciendis itaque earum fuga nemo perferendis fugit unde.
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam similique accusamus quam veritatis, eius et. Dolorum perferendis omnis aspernatur, sunt facere earum dolore delectus quia tenetur aperiam! Nulla voluptatum rem sapiente tempore quod expedita debitis quibusdam saepe! Hic ducimus voluptate provident repudiandae autem natus quibusdam? Minus debitis distinctio, fugiat numquam atque enim dolorum harum iure nihil doloribus eum, aspernatur reprehenderit. Fugit cupiditate laborum facere mollitia totam unde eligendi. Numquam minus sapiente porro reiciendis itaque earum fuga nemo perferendis fugit unde.
-    </p>
-  </div>
-  <div class="row justify-content-end my-3">
-    COMPARTIR
-    <a href="#">
-      <span class="fab fa-facebook"></span>
-    </a>
-    <a href="#">
-      <span class="fab fa-twitter"></span>
-    </a>
-  </div>
+    <div class="row">
+        <div class="ql-editor py-1 px-2" [innerHTML]='sanitizer.bypassSecurityTrustHtml( this.blogContent.editor )'></div>
+    </div>
+    <div class="row justify-content-end my-3">
+        COMPARTIR
+        <a href="#">
+            <span class="fab fa-facebook"></span>
+        </a>
+        <a href="#">
+            <span class="fab fa-twitter"></span>
+        </a>
+    </div>
 </div>
 
 <!-- ENTRADAS -->
 <div class="container my-5">
-  ENTRADAS RECIENTES
-  <hr>
-  <div class="row">
-    <div class="col-12 col-sm-6 col-md-3">
-      <div class="uk-card uk-card-default">
-        <div class="uk-card-media-top">
-          <img src="./assets/galeria/galeria3.jpg" alt="">
+    ENTRADAS RECIENTES
+    <hr>
+    <div class="row">
+        <div class="col-12 col-sm-6 col-md-4" *ngFor="let articulo of articulos">
+            <a [routerLink]="['/blog', articulo.id]">
+                <div class="uk-card uk-card-default">
+                    <div class="uk-card-media-top">
+                        <img [src]="articulo.imagen" [alt]="articulo.titulo">
+                    </div>
+                    <div class="p-3">
+                        <h3 class="card-title mb-0">{{ articulo.titulo }} </h3>
+                    </div>
+                </div>
+            </a>
         </div>
-        <div class="p-3">
-          <h3 class="card-title mb-0">TITULO ARTICULO</h3>
-        </div>
-      </div>
     </div>
-    <div class="col-12 col-sm-6 col-md-3">
-      <a href="#">
-        <div class="uk-card uk-card-default">
-          <div class="uk-card-media-top">
-            <img src="./assets/galeria/galeria3.jpg" alt="">
-          </div>
-          <div class="p-3">
-            <h3 class="card-title mb-0">TITULO ARTICULO</h3>
-          </div>
-        </div>
-
-      </a>
-    </div>
-    <div class="col-12 col-sm-6 col-md-3">
-      <div class="uk-card uk-card-default">
-        <div class="uk-card-media-top">
-          <img src="./assets/galeria/galeria3.jpg" alt="">
-        </div>
-        <div class="p-3">
-          <h3 class="card-title mb-0">TITULO ARTICULO</h3>
-        </div>
-      </div>
-    </div>
-    <div class="col-12 col-sm-6 col-md-3">
-      <div class="uk-card uk-card-default">
-        <div class="uk-card-media-top">
-          <img src="./assets/galeria/galeria3.jpg" alt="">
-        </div>
-        <div class="p-3">
-          <h3 class="card-title mb-0">TITULO ARTICULO</h3>
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
 
 <!-- COMENTARIOS -->
 <div class="container">
-  COMENTARIOS
-  <hr>
-  <div class="form-group">
-    <textarea class="form-control" placeholder="Dejanos tu comentario" rows="5"></textarea>
-  </div>
-  <button class="button btn-primary col-3">COMENTAR</button>
-  <!-- <textarea class="col-12 "  rows="5"></textarea> -->
+    COMENTARIOS
+    <hr>
+    <div class="form-group">
+        <textarea class="form-control" placeholder="Dejanos tu comentario" rows="5"></textarea>
+    </div>
+    <button class="button btn-primary col-3">COMENTAR</button>
+    <!-- <textarea class="col-12 "  rows="5"></textarea> -->
 </div>
