--- a/src/app/components/principal/principal.component.html
+++ b/src/app/components/principal/principal.component.html
@@ -1,3 +1,23 @@
+<div class="uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-light" style="height:92vh;"
+    data-src="./assets/banner_nova.jpg" uk-img>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12">
+                <h2 class="text-center shadow-title em-triple titulo-nova mb-0">PUNTO GUADIANA</h2>
+            </div>
+            <div class="col-12">
+                <h3 class="text-center shadow-title titulo-nova mb-0">el punto es tu bienestar</h3>
+            </div>
+            <div class="col-12">
+                <h1 class="text-center shadow-title em-cuatruple titulo-nova mb-0">¡YA ABRIMOS!</h1>
+            </div>
+            <div class="col-12 col-md-3">
+                <h3 class="text-center button button-rojo col-12 titulo-nova mb-0">PLANTA BAJA</h3>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="bg-img-primary uk-flex uk-flex-center
   uk-flex-middle uk-background-cover uk-light pt-5" data-src="./assets/images/edificio.png" uk-img>
     <div class="container">
