Crear el componente cotizador

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -26,9 +26,9 @@
                     <img class="hijo" src="./assets/logos/dos_17.png" alt="">
                 </a>
             </div>
-            <div class="col-5 col-md-2 padre mb-3">
+            <!-- <div class="col-5 col-md-2 padre mb-3">
                 <img class="hijo" src="./assets/logos/rebel_studio.png" alt="">
-            </div>
+            </div> -->
         </div>
     </div>
 </footer>
