--- a/src/app/components/principal/principal.component.html
+++ b/src/app/components/principal/principal.component.html
@@ -1,5 +1,4 @@
-<div class="uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-light" style="height:92vh;"
-    data-src="./assets/banner_nova.jpg" uk-img>
+<div class="uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-light" style="height:92vh;" data-src="./assets/banner_nova.jpg" uk-img>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12">
@@ -40,7 +39,7 @@
     </div>
 </div>
 
-<div class="container " uk-parallax="opacity: 0,1; y: 300,0; scale: 2,1; viewport: 0.5;">
+<div class="container ">
     <div class="row justify-content-center">
         <div class="col-6 col-md-4">
             <img class="img-fluid uk-align-center mb-3" src="./assets/icono/equipo.png" alt="">
@@ -161,7 +160,7 @@
         <div class="col-12 col-md-4 p-3 padre">
             <div class="row hijo">
                 <a class="button button-azul col-12 my-2" target="_blank" href="https://www.youtube.com/watch?v=y6bqXH-lYBo">VER TUTORIAL</a>
-                <a class="button button-rojo col-12 my-2" target="_blank" href="http://189.197.184.182:9090/EclipseWeb/login">CONSULTAR</a>
+                <a class="button button-rojo col-12 my-2" target="_blank" href="http://labnovaeclipse.ddns.net:9090/EclipseWeb/login">CONSULTAR</a>
             </div>
         </div>
     </div>
@@ -248,12 +247,12 @@
             </div>
         </div>
     </div>
-    <div class="row justify-content-center">
-        <!-- <div class="col-12 col-sm-8 col-md-4"> -->
+    <!-- <div class="row justify-content-center">
+        <div class="col-12 col-sm-8 col-md-4">
         <div class="g-ytsubscribe" data-channelid="UCp9wwNw9sUZSTp9JPfteTFw" data-layout="full" data-count="hidden"></div>
-        <!-- <a href="http://www.youtube.com/subscription_center?add_user=UCp9wwNw9sUZSTp9JPfteTFw" class="button button-rojo col-12">SUSCRIBIRSE</a> -->
-        <!-- </div> -->
-    </div>
+        <a href="http://www.youtube.com/subscription_center?add_user=UCp9wwNw9sUZSTp9JPfteTFw" class="button button-rojo col-12">SUSCRIBIRSE</a>
+        </div>
+    </div> -->
 </div>
 
 <app-contacto id="contacto"></app-contacto>
