--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,39 +1,23 @@
-<!-- <div class="menu_bar">
-  <a href="#" class="bt-menu"><span class="icon-list2"></span>Menú</a>
-</div>
-<nav class="uk-navbar-container" uk-navbar>
-  <div class="uk-navbar-center">
-    <a class="uk-navbar-item uk-logo" href="#"><img width="100px" src="./assets/logos/nova_blanco.png" alt=""></a>
-    <ul class="uk-navbar-nav">
-      <li class=""><a class="text-white menu-item" href="">SERVICIOS</a></li>
-      <li class=""><a class="text-white menu-item" href="">RESULTADOS EN LÍNEA</a></li>
-      <li class=""><a class="text-white menu-item" href="">COTIZADOR</a></li>
-      <li class=""><a class="text-white menu-item" href="">BLOG</a></li>
-      <li class=""><a class="text-white menu-item" href="">CONTACTO</a></li>
-      <li class=""><a class="text-white menu-item redes" href=""><i class="fab fa-facebook redes"></i></a></li>
-    </ul>
-    <button class="menu-item button button-rojo px-3" ><i class="fas fa-phone-alt pr-2"></i>Urgencias</button>
-  </div>
-</nav> -->
 <header>
+    <div class="menu_bar">
+        <a [routerLink]="" class="bt-menu"><span class="fa fa-bars"></span>Menú</a>
+    </div>
 
-  <div class="menu_bar">
-    <a [routerLink]="" class="bt-menu"><span class="fa fa-bars"></span>Menú</a>
-  </div>
-
-  <nav >
-    <ul  class="p-0">
-      <img class="my-2 mx-3" width="70px" src="./assets/logos/nova_blanco.png" alt="">
-      <li><a class="" href="#servicios">SERVICIOS</a></li>
-      <li><a class="" href="http://189.197.184.182:9090/EclipseWeb/login" target="_blanc">RESULTADOS EN LÍNEA</a></li>
-      <li><a class="" href="">COTIZADOR</a></li>
-      <li><a class="" [routerLink]="['/blog']">BLOG</a></li>
-      <li><a class="" href="#contacto">CONTACTO</a></li>
-      <li><a class="" href=""><i class="fab fa-facebook"></i></a></li>
-      <li>
-        <a class="menu-item button button-rojo ml-3 px-3" ><i class="fas fa-phone-alt pr-2"></i>Urgencias</a>
-      </li>
-
-    </ul>
-  </nav>
+    <nav class="row justify-content-center no-margin">
+        <ul class="p-0 navbar-center">
+            <img class="my-2 mx-3" width="70px" src="./assets/logos/nova_blanco.png" alt="">
+            <li><a href="#servicios">SERVICIOS</a></li>
+            <li><a href="http://labnovaeclipse.ddns.net:9090/EclipseWeb/login" target="_blanc">RESULTADOS EN LÍNEA</a></li>
+            <li><a href="">COTIZADOR</a></li>
+            <li><a [routerLink]="['/blog']">BLOG</a></li>
+            <li><a href="#contacto">CONTACTO</a></li>
+            <li>
+                <a href="https://www.facebook.com/labnovamx/" target="_blanc"> <i class="fab fa-facebook text-white"></i>
+                </a>
+            </li>
+            <li>
+                <a href="tel:6181753034" class="menu-item button button-rojo ml-3 px-3"><i class="fas fa-phone-alt pr-2"></i>Urgencias</a>
+            </li>
+        </ul>
+    </nav>
 </header>
