--- a/src/styles.scss
+++ b/src/styles.scss
@@ -154,6 +154,10 @@ $gris: #575757;
     padding: 0px !important;
 }
 
+.no-margin {
+    margin: 0px !important;
+}
+
 .padre {
     display: flex;
     justify-content: center;
@@ -378,7 +382,6 @@ header nav ul li .caret {
     header nav ul li .caret {
         float: right;
     }
-
     .ratio-16-9 {
         width: 100%;
         padding-top: 45%;
