--- a/src/app/components/cotizador/cotizador.component.html
+++ b/src/app/components/cotizador/cotizador.component.html
@@ -1,3 +1,128 @@
-<p>
-  cotizador works!
-</p>
+<div class="container-fluid">
+    <div class="row full-height">
+        <div class="col-12 col-md-8 bg-azul-claro">
+            <div class="row bg-azul">
+                <h2 class="col-12 text-center font-weight-bold text-white py-2 my-0">Cotizador en línea</h2>
+            </div>
+            <div class="row full-height justify-content-center">
+                <form class="container mt-3 mx-1 mx-md-5" action="">
+                    <div class="row justify-content-center">
+                        <div class="form-group col-12 col-sm-11 col-md-10">
+                            <input (input)="setNameClient($event.target.value)" type="text" class="form-control rounded-pill col-12" placeholder="Nombre">
+                        </div>
+                        <div class="form-group col-12 col-sm-11 col-md-10 mb-0">
+                            <label class="text-white ml-3">Filtrado de estudios</label>
+                            <input type="text" class="form-control rounded-pill col-12" placeholder="Escribe para buscar">
+                        </div>
+                    </div>
+                </form>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 col-sm-11 col-md-10">
+                            <h1 class="font-weight-bold text-white-50 my-0 ml-5">SIN</h1>
+                            <h1 class="font-weight-bold text-white-50 my-0 ml-5">RESULTADOS</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-12 col-sm-6 col-md-4">
+                            <div class="card bg-light mb-3 rounded-top">
+                                <div class="card-body border-bottom name-treatment p-2">
+                                    <p class="font-weight-bold border-bottom mb-0">AMIBA EN FRESCO, pH Y AZUCARES REDUCTORES EN HECES</p>
+                                    <p class="font-weight-bold mb-0 mt-1 text-danger h6 text-right">$430</p>
+                                </div>
+                                <div class="card-header border-bottom-0 text-right p-0">
+                                    <span class="add-title">AGREGAR</span>
+                                    <button class="button-add">+</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-4">
+                            <div class="card bg-light mb-3 rounded-top">
+                                <div class="card-body border-bottom name-treatment p-2">
+                                    <p class="font-weight-bold border-bottom mb-0">AMIBA EN FRESCO, pH Y AZUCARES REDUCTORES EN HECES</p>
+                                    <p class="font-weight-bold mb-0 mt-1 text-danger h6 text-right">$430</p>
+                                </div>
+                                <div class="card-header border-bottom-0 text-right p-0">
+                                    <span class="add-title">AGREGAR</span>
+                                    <button class="button-add">+</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-4">
+                            <div class="card bg-light mb-3 rounded-top">
+                                <div class="card-body border-bottom name-treatment p-2">
+                                    <p class="font-weight-bold border-bottom mb-0">AMIBA EN FRESCO, pH Y AZUCARES REDUCTORES EN HECES</p>
+                                    <p class="font-weight-bold mb-0 mt-1 text-danger h6 text-right">$430</p>
+                                </div>
+                                <div class="card-header border-bottom-0 text-right p-0">
+                                    <span class="add-title">AGREGAR</span>
+                                    <button class="button-add">+</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-4">
+            <div class="container my-3">
+                <div class="row justify-content-center">
+                    <div class="col-5 col-sm-6 col-md-5">
+                        <img class="img-fluid" src="./assets/logos/nova_color.png" alt="Laboratorio nova">
+                    </div>
+                </div>
+                <div class="row my-3">
+                    <div class="col-12 border-bottom">
+                        <label class="">NOMBRE: {{ nombre }}</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="font-weight-bold text-blue text-center">Resultados</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <p class="text-center text-muted">No se han agregado estudios</p>
+                    </div>
+                    <div class="col-12">
+                        <div class="card-body border-bottom name-treatment p-2">
+                            <div class="row">
+                                <div class="col-8">
+                                    <div class="row">
+                                        <p class="font-weight-bold mb-0">AMIBA EN FRESCO, pH Y AZUCARES REDUCTORES EN HECES</p>
+                                    </div>
+                                    <div class="row">
+                                        <span class="text-blue font-weight-bold">Condiciones</span>
+                                        <span>Muestra de heces reciente  (menos de una hora)</span>
+                                    </div>
+                                </div>
+                                <div class="col-3">
+                                    <p class="font-weight-bold mb-0 mt-1 text-danger h5 text-right">$4930.00</p>
+                                </div>
+                                <div class="col-1">
+                                    <button class="btn badge badge-danger font-weight-bold rounded-circle">X</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row my-3">
+                    <div class="col-12">
+                        <h3 class="font-weight-bold text-right my-0"><span class="mx-2 text-muted">Total:</span> <span class="text-danger">$10,000.00</span></h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <button class="btn btn-primary col-12 rounded-pill">Descargar</button>
+                    </div>
+                    <div class="col-6">
+                        <button class="btn btn-danger col-12 rounded-pill">Imprimir</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
