--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,7 +8,7 @@
             <img class="my-2 mx-3" width="70px" src="./assets/logos/nova_blanco.png" alt="">
             <li><a href="#servicios">SERVICIOS</a></li>
             <li><a href="http://labnovaeclipse.ddns.net:9090/EclipseWeb/login" target="_blanc">RESULTADOS EN LÍNEA</a></li>
-            <li><a href="">COTIZADOR</a></li>
+            <li><a [routerLink]="['/cotizador']">COTIZADOR</a></li>
             <li><a [routerLink]="['/blog']">BLOG</a></li>
             <li><a href="#contacto">CONTACTO</a></li>
             <li>
