Agregar cambios en card blog

--- a/src/app/components/blog/ver/ver.component.html
+++ b/src/app/components/blog/ver/ver.component.html
@@ -10,7 +10,7 @@
     <div class="row">
         <div class="ql-editor py-1 px-2" [innerHTML]='sanitizer.bypassSecurityTrustHtml( this.blogContent.editor )'></div>
     </div>
-    <div class="row justify-content-end my-3">
+    <!-- <div class="row justify-content-end my-3">
         COMPARTIR
         <a href="#">
             <span class="fab fa-facebook"></span>
@@ -18,7 +18,7 @@
         <a href="#">
             <span class="fab fa-twitter"></span>
         </a>
-    </div>
+    </div> -->
 </div>
 
 <!-- ENTRADAS -->
