--- a/src/app/components/cotizador/cotizador.component.html
+++ b/src/app/components/cotizador/cotizador.component.html
@@ -98,7 +98,7 @@
                         <button class="btn btn-primary col-12 rounded-pill" (click)="crearPdf()">Descargar</button>
                     </div>
                     <div class="col-6">
-                        <button class="btn btn-danger col-12 rounded-pill">Imprimir</button>
+                        <button class="btn btn-danger col-12 rounded-pill" (click)="imprimirPdf()">Imprimir</button>
                     </div>
                 </div>
             </div>
