--- a/src/app/components/cotizador/cotizador.component.html
+++ b/src/app/components/cotizador/cotizador.component.html
@@ -94,10 +94,10 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-12 col-md-6 my-2">
                         <button class="btn btn-primary col-12 rounded-pill" (click)="crearPdf()">Descargar</button>
                     </div>
-                    <div class="col-6">
+                    <div class="col-12 col-md-6 my-2">
                         <button class="btn btn-danger col-12 rounded-pill" (click)="imprimirPdf()">Imprimir</button>
                     </div>
                 </div>
